<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_tab_home"
        android:title="@string/tab_home" />
    <item
        android:id="@+id/learnFragment"
        android:icon="@drawable/ic_tab_learn"
        android:title="@string/tab_learn" />
    <item
        android:id="@+id/aiFragment"
        android:icon="@drawable/ic_tab_ai"
        android:title="@string/tab_ai" />
    <item
        android:id="@+id/rewardsFragment"
        android:icon="@drawable/ic_tab_rewards"
        android:title="@string/tab_rewards" />
    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_tab_profile"
        android:title="@string/tab_profile" />
</menu>
